fixed alignment at the end

--- a/src/styles/ending.css
+++ b/src/styles/ending.css
@@ -26,7 +26,7 @@
     max-width: 80px;
 }
 .sublogo{
-    transform: translateX(-6px);
+    transform: translateX(-4px);
 }
 
 .SocialMedia{
